@@ -201,6 +201,30 @@
         </executions>
 
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>default-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <archive>
+                <manifestEntries>
+                  <!-- These options enable access to all methods in the mentioned packages at
+                  compile and runtime. These options are added as MANIFEST entries in the bundled
+                  jar  -->
+                  <Add-Exports>java.base/jdk.internal.misc</Add-Exports>
+                  <Add-Opens>java.base/jdk.internal.misc=ALL-UNNAMED</Add-Opens>
+                </manifestEntries>
+              </archive>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
